<resources>
    <string name="app_name">MinTicTesting</string>
    <string name="label">Usuario</string>
    <string name="labelUsuario">Usuario</string>
    <string name="labelContraseña">Contraseña</string>
    <string name="helpTextPassword">Olvidé mi contraseña</string>
    <string name="helpTextUsuario">normalmente es tu correo 😉</string>
    <string name="loginButtonText">LOGIN</string>
    <string name="registroButtonText">Registro</string>
    <string name="rg_correo">Correo</string>
    <string name="rg_nombre_de_usuario">Nombre de usuario</string>
    <string name="rgcorreo">Correo</string>
    <string name="labelConfirmarContraseña">Confirmar contraseña</string>
    <string name="TituloRegistrarse">Registrate</string>
    <string name="ParametrosContraseña">mínimo de 8 digitos, debe incluir un número, una mayúscula, una minúscula y un caracter especial</string>
    <string name="crea_tu_perfil">Crea tu perfil</string>
    <string name="algunos_dias_a_la_semana">Algunos dias a la semana</string>
    <string name="todos_los_dias">Todos los dias</string>
    <string name="cada_quince_dias">Cada quince dias</string>
    <string name="una_sola_vez_a_la_semana">Una sola vez a la semana</string>
    <string name="ocasionalmente">Ocasionalmente al mes</string>
    <string name="nunca">Nunca</string>
    <string name="frecuencia_actividad_fisica">¿Con que frecuencia prácticas\nalguna actividad física?</string>
    <string name="siguiente_text">Siguiente</string>
    <string name="estadoFisico">En general considero que \nmi estado fisico es?</string>
    <string name="excelente">excelente</string>
    <string name="bueno">bueno</string>
    <string name="malo">malo</string>
    <string name="no_tan_bueno">No tan bueno</string>
    <string name="realizo_otras_acividades">realizo otras acividades</string>
    <string name="ingresa_tu_estatura">Tu estatura aproximada es:</string>
    <string name="ingresa_tu_peso_aproximado">Tu peso aproximado es:</string>
    <string name="imagenperfil">imagenPerfil</string>
    <string name="TrailRunningDescription">consiste en correr por senderos de montaña, huellas, rastros o caminos secundarios, a través de montañas, cerros y montes, cruzando arroyos y ríos, con grandes trepadas y abruptas bajadas, a diferencia de lo que ocurre en los maratones y el senderismo.1​ Tanto la naturaleza del terreno como el desnivel del recorrido, además de la distancia, son dos características fundamentales de un recorrido de carrera de montaña.</string>
    <string name="DescripcionMontañismo">coronar la cima de una montaña o hacer la caminata más larga invita a quien practica estas actividades a buscar variedad de destinos para romper su marca personal.</string>
    <string name="DescripciónParapente">Volar y sentirse libre es el deseo de muchos. Un experto te ayudará con arneses y cuerdas de suspensión y si es tu primera vez, estará contigo surcando los aires.</string>
    <string name="DescipcionEscalada">es una actividad que consiste en realizar ascensos sobre paredes, valiéndose de la fuerza física propia. Se considera escalada todo ascenso con las extremidades inferiores (pies y piernas; en algunos casos también se podría llegar a utilizar la rodilla, por si hubiera alguna pared al lado) y las extremidades superiores (brazos y manos). En la escalada hay alturas que implican un peligro considerable y con el objetivo de tener seguridad se utiliza equipo de protección.</string>
    <string name="DescripcionRafting">El descenso en balsa por el caudal de los ríos es una de las actividades recreativas que tiene cada vez más adeptos. La adrenalina la produce el desafío que representa mantener el equilibrio sobre las fuertes corrientes y los rápidos.</string>
    <string name="DescripcionSurf">Pasear por encima de las olas se ha convertido en una práctica para quienes gustan de los destinos de playa. Solo se requiere de una tabla, manejo del equilibrio y aprender a leer las olas adecuadas, con el objetivo de hacer la mejor maniobra.</string>
    <string name="Descripcion_Rapel">Para el descenso rápido por las paredes verticales de las montañas, solo necesitas decisión, la ayuda de una cuerda y las indicaciones del guía.</string>
    <string name="Descripcion_Futbol">es un deporte de equipo jugado entre dos conjuntos de once jugadores cada uno y algunos árbitros que se ocupan de que las normas se cumplan correctamente. Es ampliamente considerado el deporte más popular del mundo, pues lo practican unas 270 millones de personas.</string>

</resources>