<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraints"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/fondo2"
    android:backgroundTint="@color/highLightColor"
    android:backgroundTintMode="multiply">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsuario"
        android:hint="@string/labelUsuario"
        app:helperText="@string/helpTextUsuario"
        style="@style/TextInputLayout"
        app:layout_constraintBottom_toTopOf="@+id/tilContraseña"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContraseña"
        style="@style/TextInputLayout"
        android:layout_marginBottom="32dp"
        android:hint="@string/labelContraseña"
        app:endIconMode="password_toggle"
        app:helperText="@string/helpTextPassword"
        app:layout_constraintBottom_toTopOf="@+id/bLoginV"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bLoginV"
        android:text="@string/loginButtonText"
        style="@style/FilledButton"
        app:layout_constraintBottom_toTopOf="@+id/bRegistroV"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/bRegistroV"
        android:text="@string/registroButtonText"
        style="@style/OutlineButton"
        android:layout_marginBottom="@dimen/xlongSpace"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"/>

    <!--Instrucciones para modificar las propiedades del OutLine
                app:rippleColor="#33AAAAAA"
                app:strokeColor="@color/secundaryColor"
                app:strokeWidth="2dp"-->


</androidx.constraintlayout.widget.ConstraintLayout>

