<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.registro.regUsuarioContrasena"
    android:background="@drawable/fondo1_small"
    android:backgroundTint="@color/highLightColor"
    android:backgroundTintMode="multiply">

    <TextView
        android:id="@+id/tvTittle"
        style="@style/TittleText"
        android:text="@string/TituloRegistrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivIcono"
        android:layout_width="@dimen/xlongSpace"
        android:layout_height="@dimen/xlongSpace"
        android:layout_marginTop="@dimen/longSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle"
        app:srcCompat="@drawable/ic_round_how_to_reg_24"
        app:tint="@color/primaryColor"
        android:tintMode="multiply"
        android:contentDescription="@string/imagenperfil" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreo"
        style="@style/TextInputLayout"
        android:hint="@string/rgcorreo"
        android:layout_marginTop="@dimen/longSpace"
        app:layout_constraintTop_toBottomOf="@+id/ivIcono"

        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkColor"
            android:inputType="textEmailAddress"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContrasena"
        style="@style/TextInputLayout"
        android:hint="@string/labelContraseña"
        android:layout_marginTop="@dimen/shortSpace"
        app:layout_constraintTop_toBottomOf="@+id/tilCorreo"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        tools:ignore="MissingConstraints">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkColor"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/shortSpace"
        android:layout_marginHorizontal="@dimen/longSpace"
        android:text="@string/ParametrosContraseña"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilContrasena" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmarContrasena"
        style="@style/TextInputLayout"
        android:hint="@string/labelConfirmarContraseña"
        android:layout_marginTop="@dimen/shortSpace"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_ConfContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkColor"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bCreaTuPerfil"
        style="@style/FilledButton"
        android:layout_marginTop="@dimen/xlongSpace"
        android:text="@string/crea_tu_perfil"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmarContrasena"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>
