<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trail_running1"
    android:backgroundTint="@color/highLightColor"
    android:backgroundTintMode="multiply"
    tools:context=".Vistas.registro.regFrecuenciaPracticaDeportiva">


    <TextView
        android:id="@+id/tvPracticaAlgunDeporte"
        style="@style/TittleText"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="@dimen/longSpace"
        android:layout_marginTop="96dp"
        android:text="¿has prácticado algún deporte antes?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tbGroup1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPracticaAlgunDeporte"
        app:singleSelection="true">

        <Button
            android:id="@+id/bSi"
            style="@style/OutlineButton"
            android:layout_marginHorizontal="0dp"
            android:text="Si" />

        <Button
            android:id="@+id/bNo"
            style="@style/OutlineButton"
            android:layout_marginHorizontal="0dp"
            android:text="No" />


    </com.google.android.material.button.MaterialButtonToggleGroup>


    <TextView
        android:id="@+id/tvFrecuenciaActividadFisica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlongSpace"
        android:text="@string/frecuencia_actividad_fisica"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/secundaryColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbGroup1" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/tbGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFrecuenciaActividadFisica"
            app:singleSelection="true"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbars="horizontal|vertical">


            <Button
                android:id="@+id/bTodosLosDias"
                style="@style/OutlineButton"
                android:layout_marginHorizontal="0dp"
                android:text="@string/todos_los_dias" />

            <Button
                android:id="@+id/bAlgunosDias"
                style="@style/OutlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:text="@string/algunos_dias_a_la_semana" />

            <Button
                android:id="@+id/bCadaQuince"
                style="@style/OutlineButton"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="@dimen/xlongSpace"
                android:text="@string/cada_quince_dias" />

            <Button
                android:id="@+id/bOcacionalmente"
                style="@style/OutlineButton"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="@dimen/longSpace"
                android:text="@string/ocasionalmente" />

            <Button
                android:id="@+id/bNunca"
                style="@style/OutlineButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="@dimen/longSpace"
                android:text="@string/nunca" />


        </com.google.android.material.button.MaterialButtonToggleGroup>


    <Button
        android:id="@+id/bSiguiente"
        android:text="@string/siguiente_text"
        android:layout_marginTop="@dimen/xlongSpace"
        style="@style/FilledButton"
        app:layout_constraintTop_toBottomOf="@+id/tbGroup2"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>