<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regUsuarioContrasena"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTittle"
        android:text="@string/TituloRegistrarse"
        android:textAppearance="?attr/textAppearanceBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlongSpace"
        android:textSize="28sp"
        android:textColor="@color/darkColor"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIcono"
        android:layout_width="@dimen/xlongSpace"
        android:layout_height="@dimen/xlongSpace"
        android:layout_marginTop="@dimen/longSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle"
        app:srcCompat="@drawable/ic_round_how_to_reg_24"
        app:tint="@color/primaryColor"
        android:tintMode="multiply"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreUsuario"
        android:hint="@string/rg_nombre_de_usuario"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/longSpace"
        app:layout_constraintTop_toBottomOf="@+id/ivIcono"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkColor"
            android:inputType="textPersonName"/>



    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreo"
        style="@style/TextInputLayout"
        android:hint="@string/rgcorreo"
        android:layout_marginTop="@dimen/shortSpace"
        app:layout_constraintTop_toBottomOf="@+id/tilNombreUsuario"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkColor"
            android:inputType="textEmailAddress"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContrasena"
        style="@style/TextInputLayout"
        android:hint="@string/labelContraseña"
        android:layout_marginTop="@dimen/shortSpace"
        app:layout_constraintTop_toBottomOf="@+id/tilCorreo"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        tools:ignore="MissingConstraints">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkColor"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/shortSpace"
        android:layout_marginHorizontal="@dimen/longSpace"
        android:text="@string/ParametrosContraseña"
        android:textSize="12sp"
        android:textColor="@color/ColorTextoPersonalizado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilContrasena" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmarContrasena"
        style="@style/TextInputLayout"
        android:hint="@string/labelConfirmarContraseña"
        android:layout_marginTop="@dimen/shortSpace"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkColor"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:text="@string/crea_tu_perfil"
        style="@style/FilledButton"
        android:layout_marginTop="@dimen/xlongSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmarContrasena" />


</androidx.constraintlayout.widget.ConstraintLayout>
